[iOS] Don't attempt to reset read status for empty sections.

If the ReadingListTableViewController's model doesn't have any items in
a section, using the "Mark All" option for that section previously
threw a DCHECK.  This CL early returns so that we don't attempt to
access sections that don't exist.

Bug: 862169
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Iea947d6ef700d5d45afb54961b06e29d77615cd2
Reviewed-on: https://chromium-review.googlesource.com/1132606
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574347}
Former-commit-id: 04963cdf8f6d3c4bdf9478d52686871a25fef659